Made some more changes affecting numerous changes to Picsee workflow.

--- a/views/crop.ejs
+++ b/views/crop.ejs
@@ -15,6 +15,7 @@
 		<div class="container">
 			<h1><%= title %></h1>
 			<p>Welcome to the Picsee Cropper</p>
+			<div id="main">...</div>
 			<div class="span12">			
 				<% results.forEach(function (result) { %>	
 					<form action="crop" method="post" id="crop">
