--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -8,6 +8,7 @@ $(document).ready(function() {
 });
 </script>
 
+<p>Use the form below to upload your photo</p>
 <form action="upload" method="post" id="upload" enctype="multipart/form-data">
 	<fieldset>
 		<legend>Choose a File to Upload</legend>
