--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,39 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />		 
-		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/ui-lightness/jquery-ui.css" />
-		<link rel='stylesheet' href='/stylesheets/jquery.Jcrop.min.css' />		 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
-		<script src="/javascripts/jquery.form.js"></script>
-		<script src="/javascripts/jquery.Jcrop.min.js"></script>
-  </head>
-  <body>
-		<div class="container">
-			<h1><%= title %></h1>
-			<p>Welcome to the Picsee Cropper</p>
-			<div class="row">
-				<div class="span12">
-					<% if (results) { %>
-						<div class="row">
-							<% results.forEach(function (result) { %>
-								<% result.forEach(function (version) { %>
-								<div class="span12">
-									<p>Image: <em><%- version.image %></em> has been successfully saved!</p>
-									<img src="/images/processed/<%- version.image %>" alt="<%- version.image %>" />
-								</div>
-								<% }) %>
-							<% }) %>
-						</div>
-					<% } %>
-					<div class="row main">
-						<%- include form %>
-					</div>
-				</div>
-			</div>
-		</div>
-  </body>
-</html>
+<%- include header %>
+<%- include upload %>
+<%- include footer %>
