--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,36 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />		 
-		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/ui-lightness/jquery-ui.css" />
-		<link rel='stylesheet' href='/stylesheets/jquery.Jcrop.min.css' />		 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
-		<script src="/javascripts/jquery.form.js"></script>
-		<script src="/javascripts/jquery.Jcrop.min.js"></script>
-  </head>
-  <body>
-		<div class="container">
-			<h1><%= title %></h1>
-			<p>Welcome to the Picsee Cropper</p>
-			<div class="row">
-				<div class="span12">			
-					<p>Your Photo has been successfully cropped!</p>
-					<ul class="thumbnails">
-						<% results.forEach(function(result) { %>
-						<li class="span3">
-							<div class="thumbnail">
-								<img src="<%- result.url %>" alt="<%- result.name %>" />
-								<h4><%- result.name %></h4>
-								<p>Saved as: <%- result.path %></p>
-							</div>
-						</li>
-						<% }); %>
-					</ul>
-				</div>
-			</div>
+<%- include header %>
+<p>Your Photo has been successfully cropped!</p>
+<p>Click <a href="/">here</a> to Upload another photo.</p>
+<ul class="thumbnails">
+	<% results.forEach(function(result) { %>
+	<li class="span3">
+		<div class="thumbnail">
+			<img src="<%- result.url %>" alt="<%- result.name %>" />
+			<h4><%- result.name %></h4>
+			<p>Saved as: <%- result.path %></p>
 		</div>
-  </body>
-</html>
+	</li>
+	<% }); %>
+</ul>
+<%- include footer %>
