Added functionality so that the original photo is stored, and then shown later after photos are cropped.

--- a/views/crop.ejs
+++ b/views/crop.ejs
@@ -16,6 +16,7 @@
 			<input type="hidden" name="w" id="w" />
 			<input type="hidden" name="h" id="h" />
 			<input type="hidden" name="image" value="<%- result.path %>" />
+			<input type="hidden" name="original" value="<%- result.original.name %>" />
 			<div class="form-actions">
 				<button class="crop btn btn-primary">Apply</button>
 			</div>
